--- a/.github/workflows/ci-cdd.yml
+++ b/.github/workflows/ci-cdd.yml
@@ -8,16 +8,12 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: test-result # <== Sesuaikan dengan lokasi package.json
-
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v3.6.0
 
       - name: Setup Node.js
-        uses: actions/setup-node@v4
+        uses: actions/setup-node@v4.4.0
         with:
           node-version: 18
 
@@ -31,23 +27,21 @@ jobs:
         run: |
           docker build -t moodup-test .
           docker run -d --name moodup-test -p 8087:80 moodup-test
-          sleep 5
+          sleep 5 # tunggu container ready
 
       - name: Run Playwright tests
         run: npx playwright test
 
-      - name: Stop and remove container
-        run: |
-          docker stop moodup-test
-          docker rm moodup-test
+      - name: Stop container
+        run: docker stop moodup-test
+
 
   build-and-push:
     runs-on: ubuntu-latest
     needs: test
-
     steps:
       - name: Checkout Repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v3.1.2
 
       - name: Login to Docker Hub
         run: echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
@@ -61,7 +55,6 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: build-and-push
-
     steps:
       - name: Trigger Jenkins Job
         run: |
