--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -12,21 +12,23 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
+        with:
+          path: .
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 18
 
-      - name: Install dependencies (in playwright-tests folder)
+      - name: Install dependencies
         run: npm ci
-        working-directory: ./playwright-tests
+        working-directory: playwright-tests
 
       - name: Install Playwright and browsers
         run: npx playwright install --with-deps
-        working-directory: ./playwright-tests
+        working-directory: playwright-tests
 
-      - name: Build and run site (local test server from root)
+      - name: Build and run site
         run: |
           docker build -t moodup-test .
           docker run -d --name moodup-test -p 8087:80 moodup-test
@@ -34,7 +36,7 @@ jobs:
 
       - name: Run Playwright tests
         run: npx playwright test
-        working-directory: ./playwright-tests
+        working-directory: playwright-tests
 
       - name: Stop and remove container
         run: |
@@ -48,6 +50,8 @@ jobs:
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
+        with:
+          path: .
 
       - name: Login to Docker Hub
         run: echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
